--- a/trunk/plugins/styles/metal/metal.vcproj
+++ b/trunk/plugins/styles/metal/metal.vcproj
@@ -19,6 +19,7 @@
 			OutputDirectory="..\..\..\Debug"
 			IntermediateDirectory="..\$(ConfigurationName)"
 			ConfigurationType="2"
+			InheritedPropertySheets="$(SolutionDir)sim\win32\sim-default.vsprops"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="false"
 			CharacterSet="2"
@@ -48,13 +49,13 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="$(QTDIR)\include,..\..\..\sim"
-				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;_USRDLL;metal_EXPORTS;QT_DLL;UNICODE;QT_THREAD_SUPPORT"
+				AdditionalIncludeDirectories=""
+				PreprocessorDefinitions="_DEBUG;DEBUG"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				BrowseInformation="1"
-				WarningLevel="3"
+				WarningLevel="4"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
 			/>
@@ -64,7 +65,6 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="_DEBUG"
-				Culture="1047"
 				AdditionalIncludeDirectories="..\..\.."
 			/>
 			<Tool
@@ -72,14 +72,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				IgnoreImportLibrary="true"
-				AdditionalDependencies="$(QTDIR)\lib\$(QTLIB) $(QTDIR)\lib\qtmain.lib $(SolutionDir)$(ConfigurationName)\sim.lib imm32.lib wsock32.lib winmm.lib"
-				OutputFile="..\..\..\Debug\plugins\styles/metal.dll"
+				AdditionalDependencies="$(SolutionDir)$(ConfigurationName)\sim.lib"
+				OutputFile="$(OutDir)\plugins\styles\$(ProjectName).dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\..\Debug\plugins\styles/metal.pdb"
-				ImportLibrary=".\..\Debug\plugins\styles/metal.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -93,8 +90,6 @@
 			/>
 			<Tool
 				Name="VCBscMakeTool"
-				SuppressStartupBanner="true"
-				OutputFile=".\..\Debug\plugins\styles/metal.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -114,7 +109,7 @@
 			OutputDirectory="..\..\..\Release"
 			IntermediateDirectory="..\$(ConfigurationName)"
 			ConfigurationType="2"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
+			InheritedPropertySheets="$(SolutionDir)sim\win32\sim-default.vsprops"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="false"
 			CharacterSet="2"
@@ -144,14 +139,13 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="2"
-				AdditionalIncludeDirectories="$(QTDIR)\include,..\..\..\sim"
-				PreprocessorDefinitions="NDEBUG;WIN32;_WINDOWS;_USRDLL;metal_EXPORTS;QT_DLL;UNICODE;QT_THREAD_SUPPORT"
+				AdditionalIncludeDirectories=""
+				PreprocessorDefinitions="_NDEBUG;NDEBUG"
 				StringPooling="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
-				DisableSpecificWarnings="4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -159,7 +153,6 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="NDEBUG"
-				Culture="1047"
 				AdditionalIncludeDirectories="..\..\.."
 			/>
 			<Tool
@@ -167,11 +160,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				IgnoreImportLibrary="true"
-				AdditionalDependencies="$(QTDIR)\lib\$(QTLIB) $(QTDIR)\lib\qtmain.lib $(SolutionDir)$(ConfigurationName)\sim.lib imm32.lib wsock32.lib winmm.lib"
-				OutputFile="../../../Release/plugins/styles/metal.dll"
+				AdditionalDependencies="$(SolutionDir)$(ConfigurationName)\sim.lib"
+				OutputFile="$(OutDir)\plugins\styles\$(ProjectName).dll"
 				SuppressStartupBanner="true"
-				ImportLibrary=".\..\Release_Wrk\plugins\style/metal.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -185,8 +176,6 @@
 			/>
 			<Tool
 				Name="VCBscMakeTool"
-				SuppressStartupBanner="true"
-				OutputFile=".\..\Release_Wrk\plugins\style/metal.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
