--- a/trunk/plugins/styles/wood/wood.vcproj
+++ b/trunk/plugins/styles/wood/wood.vcproj
@@ -17,9 +17,9 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="..\..\..\Release"
-			IntermediateDirectory="..\$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
+			InheritedPropertySheets="$(SolutionDir)sim\win32\sim-default.vsprops"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="false"
 			CharacterSet="2"
@@ -49,14 +49,13 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="2"
-				AdditionalIncludeDirectories="$(QTDIR)\include,..\..\..\sim"
-				PreprocessorDefinitions="NDEBUG;WIN32;_WINDOWS;_USRDLL;wood_EXPORTS;QT_DLL;UNICODE;QT_THREAD_SUPPORT"
+				AdditionalIncludeDirectories=""
+				PreprocessorDefinitions="_NDEBUG;NDEBUG"
 				StringPooling="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
-				DisableSpecificWarnings="4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -64,7 +63,6 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="NDEBUG"
-				Culture="1047"
 				AdditionalIncludeDirectories="..\..\.."
 			/>
 			<Tool
@@ -73,10 +71,9 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="$(QTDIR)\lib\$(QTLIB) $(QTDIR)\lib\qtmain.lib $(SolutionDir)$(ConfigurationName)\sim.lib imm32.lib wsock32.lib winmm.lib"
-				OutputFile="../../../Release/plugins/styles/wood.dll"
+				AdditionalDependencies="$(SolutionDir)$(ConfigurationName)\sim.lib"
+				OutputFile="$(OutDir)\plugins\styles\$(ProjectName).dll"
 				SuppressStartupBanner="true"
-				ImportLibrary=".\..\Release_Wrk\plugins\style/wood.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -90,8 +87,6 @@
 			/>
 			<Tool
 				Name="VCBscMakeTool"
-				SuppressStartupBanner="true"
-				OutputFile=".\..\Release_Wrk\plugins\style/wood.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -109,8 +104,9 @@
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="..\..\..\Debug"
-			IntermediateDirectory="..\$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
+			InheritedPropertySheets="$(SolutionDir)sim\win32\sim-default.vsprops"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="false"
 			CharacterSet="2"
@@ -140,13 +136,13 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="$(QTDIR)\include,..\..\..\sim"
-				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;_USRDLL;wood_EXPORTS;QT_DLL;UNICODE;QT_THREAD_SUPPORT"
+				AdditionalIncludeDirectories=""
+				PreprocessorDefinitions="_DEBUG;DEBUG"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				BrowseInformation="1"
-				WarningLevel="3"
+				WarningLevel="4"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
 			/>
@@ -156,7 +152,6 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="_DEBUG"
-				Culture="1047"
 				AdditionalIncludeDirectories="..\..\.."
 			/>
 			<Tool
@@ -165,13 +160,11 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="$(QTDIR)\lib\$(QTLIB) $(QTDIR)\lib\qtmain.lib $(SolutionDir)$(ConfigurationName)\sim.lib imm32.lib wsock32.lib winmm.lib"
-				OutputFile="..\..\..\Debug\plugins\styles/wood.dll"
+				AdditionalDependencies="$(SolutionDir)$(ConfigurationName)\sim.lib"
+				OutputFile="$(OutDir)\plugins\styles\$(ProjectName).dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\..\Debug\plugins\styles/wood.pdb"
-				ImportLibrary=".\..\Debug\plugins\styles/wood.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -185,8 +178,6 @@
 			/>
 			<Tool
 				Name="VCBscMakeTool"
-				SuppressStartupBanner="true"
-				OutputFile=".\..\Debug\plugins\styles/wood.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
