add flex - a test for existing flex executable is missing

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 include(KDE3Macros)
 include(MacroBoolTo01)
 include(Qt3Uic)
+include(Flex)
 
 # needed packages
 find_package(Qt3 REQUIRED)
