small changes install _core/pict & _core/styles add some plugins fix install targets

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -24,7 +24,10 @@ FIND_PACKAGE(OpenSSL)
 
 # global settings for every project
 ADD_DEFINITIONS(${QT_DEFINITIONS} -DHAVE_CONFIG_H)
-INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
+INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR}
+                    ${CMAKE_CURRENT_BINARY_DIR}
+                    ${sim-im_SOURCE_DIR}/sim
+                    ${sim-im_SOURCE_DIR}/plugins/_core)
 LINK_DIRECTORIES(${QT_LIB_DIR})
 
 # windows, microsoft compiler
@@ -37,19 +40,13 @@ endif(MSVC)
 
 MACRO_BOOL_TO_01(OPENSSL_FOUND USE_OPENSSL)
 
-SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_INSTALL_PREFIX})
-SET(LIBRARY_OUTPUT_PATH ${CMAKE_INSTALL_PREFIX}/plugins)
-SET(ICONS_OUTPUT_PATH ${CMAKE_INSTALL_PREFIX}/icons)
-SET(SIMAPI_SRC_DIR ${sim-im_SOURCE_DIR}/sim)
-
 # subdirectories
 ADD_SUBDIRECTORY(sim)
+ADD_SUBDIRECTORY(plugins/__homedir)
+ADD_SUBDIRECTORY(plugins/__migrate)
 ADD_SUBDIRECTORY(plugins/_core)
-
-# debug
-MESSAGE(STATUS "EXECUTABLE_OUTPUT_PATH " ${EXECUTABLE_OUTPUT_PATH})
-MESSAGE(STATUS "LIBRARY_OUTPUT_PATH " ${LIBRARY_OUTPUT_PATH})
-MESSAGE(STATUS "ICONS_OUTPUT_PATH " ${ICONS_OUTPUT_PATH})
+ADD_SUBDIRECTORY(plugins/about)
+ADD_SUBDIRECTORY(plugins/action)
 
 # create config.h
 INCLUDE(ConfigureChecks.cmake)
