--- a/trunk/sim/CMakeLists.txt
+++ b/trunk/sim/CMakeLists.txt
@@ -72,6 +72,8 @@ endif(WIN32)
 INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${LIBXSLT_INCLUDE_DIR} ${ZLIB_INCLUDE_DIR})
 TARGET_LINK_LIBRARIES(simlib ${QT_QTMAIN_LIBRARY} ${QT_QT_LIBRARY} ${LIBXML2_LIBRARIES} ${LIBXSLT_LIBRARIES})
 
+# set correct install path
+INSTALL(TARGETS simlib LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX})
 
 ##################
 # sim executable #
@@ -82,3 +84,6 @@ ADD_EXECUTABLE(sim sim.cpp)
 
 # only needs simlib
 TARGET_LINK_LIBRARIES(sim simlib)
+
+# set correct install path
+INSTALL(TARGETS sim RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
