add some more projects - only 22 left :)

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -47,6 +47,17 @@ ADD_SUBDIRECTORY(plugins/__migrate)
 ADD_SUBDIRECTORY(plugins/_core)
 ADD_SUBDIRECTORY(plugins/about)
 ADD_SUBDIRECTORY(plugins/action)
+ADD_SUBDIRECTORY(plugins/autoaway)
+ADD_SUBDIRECTORY(plugins/background)
+ADD_SUBDIRECTORY(plugins/dock)
+ADD_SUBDIRECTORY(plugins/filter)
+ADD_SUBDIRECTORY(plugins/floaty)
+ADD_SUBDIRECTORY(plugins/forward)
+ADD_SUBDIRECTORY(plugins/gpg)
+ADD_SUBDIRECTORY(plugins/icons)
+ADD_SUBDIRECTORY(plugins/icq)
+ADD_SUBDIRECTORY(plugins/jabber)
+ADD_SUBDIRECTORY(plugins/zodiak)
 
 # create config.h
 INCLUDE(ConfigureChecks.cmake)
