add the rest of CMakeLists.txt - only remote plugin is left

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -60,6 +60,23 @@ ADD_SUBDIRECTORY(plugins/jabber)
 ADD_SUBDIRECTORY(plugins/livejournal)
 ADD_SUBDIRECTORY(plugins/logger)
 ADD_SUBDIRECTORY(plugins/msn)
+ADD_SUBDIRECTORY(plugins/navigate)
+ADD_SUBDIRECTORY(plugins/netmonitor)
+ADD_SUBDIRECTORY(plugins/ontop)
+ADD_SUBDIRECTORY(plugins/osd)
+ADD_SUBDIRECTORY(plugins/proxy)
+ADD_SUBDIRECTORY(plugins/replace)
+ADD_SUBDIRECTORY(plugins/shortcuts)
+ADD_SUBDIRECTORY(plugins/sms)
+ADD_SUBDIRECTORY(plugins/sound)
+ADD_SUBDIRECTORY(plugins/spell)
+ADD_SUBDIRECTORY(plugins/splash)
+ADD_SUBDIRECTORY(plugins/styles)
+ADD_SUBDIRECTORY(plugins/splash)
+ADD_SUBDIRECTORY(plugins/transparent)
+ADD_SUBDIRECTORY(plugins/update)
+ADD_SUBDIRECTORY(plugins/weather)
+ADD_SUBDIRECTORY(plugins/yahoo)
 ADD_SUBDIRECTORY(plugins/zodiak)
 
 # create config.h
