--- a/trunk/plugins/_core/pict/CMakeLists.txt
+++ b/trunk/plugins/_core/pict/CMakeLists.txt
@@ -3,5 +3,5 @@
 FILE(GLOB mng *.mng)
 FILE(GLOB png *.png)
 
-INSTALL(FILES ${mng} DESTINATION ${CMAKE_INSTALL_PREFIX}/pict)
-INSTALL(FILES ${png} DESTINATION ${CMAKE_INSTALL_PREFIX}/pict)
+INSTALL(FILES ${mng} DESTINATION ${SIM_PICT_DIR})
+INSTALL(FILES ${png} DESTINATION ${SIM_PICT_DIR})
