--- a/trunk/plugins/background/CMakeLists.txt
+++ b/trunk/plugins/background/CMakeLists.txt
@@ -26,4 +26,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(background simlib)
 
 # install target
-INSTALL(TARGETS background LIBRARY DESTINATION plugins)
+INSTALL(TARGETS background RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
