--- a/trunk/plugins/livejournal/CMakeLists.txt
+++ b/trunk/plugins/livejournal/CMakeLists.txt
@@ -30,4 +30,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(livejournal simlib)
 
 # install target
-INSTALL(TARGETS livejournal LIBRARY DESTINATION plugins)
+INSTALL(TARGETS livejournal RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
