--- a/trunk/plugins/netmonitor/CMakeLists.txt
+++ b/trunk/plugins/netmonitor/CMakeLists.txt
@@ -19,4 +19,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(netmonitor simlib)
 
 # install target
-INSTALL(TARGETS netmonitor LIBRARY DESTINATION plugins)
+INSTALL(TARGETS netmonitor RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
