--- a/trunk/plugins/osd/CMakeLists.txt
+++ b/trunk/plugins/osd/CMakeLists.txt
@@ -28,4 +28,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(osd simlib)
 
 # install target
-INSTALL(TARGETS osd LIBRARY DESTINATION plugins)
+INSTALL(TARGETS osd RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
