--- a/trunk/plugins/sms/CMakeLists.txt
+++ b/trunk/plugins/sms/CMakeLists.txt
@@ -28,4 +28,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(sms simlib)
 
 # install target
-INSTALL(TARGETS sms LIBRARY DESTINATION plugins)
+INSTALL(TARGETS sms RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+
+# install some sounds
+INSTALL(FILES sounds/phone.wav DESTINATION ${SIM_SOUND_DIR})
