--- a/trunk/plugins/splash/CMakeLists.txt
+++ b/trunk/plugins/splash/CMakeLists.txt
@@ -18,4 +18,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(splash simlib)
 
 # install target
-INSTALL(TARGETS splash LIBRARY DESTINATION plugins)
+INSTALL(TARGETS splash RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+
+# splash.png
+INSTALL(FILES splash.png DESTINATION ${SIM_PICT_DIR})
