--- a/trunk/plugins/styles/metal/CMakeLists.txt
+++ b/trunk/plugins/styles/metal/CMakeLists.txt
@@ -18,4 +18,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(metal simlib)
 
 # install target
-INSTALL(TARGETS metal LIBRARY DESTINATION plugins/styles)
+INSTALL(TARGETS metal RUNTIME  DESTINATION ${SIM_PLUGIN_DIR}/styles)
