--- a/trunk/plugins/yahoo/CMakeLists.txt
+++ b/trunk/plugins/yahoo/CMakeLists.txt
@@ -37,4 +37,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(yahoo simlib)
 
 # install target
-INSTALL(TARGETS yahoo LIBRARY DESTINATION plugins)
+INSTALL(TARGETS yahoo RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
