--- a/trunk/plugins/zodiak/CMakeLists.txt
+++ b/trunk/plugins/zodiak/CMakeLists.txt
@@ -18,4 +18,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(zodiak simlib)
 
 # install target
-INSTALL(TARGETS zodiak LIBRARY DESTINATION plugins)
+INSTALL(TARGETS zodiak RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
