--- a/trunk/plugins/filter/CMakeLists.txt
+++ b/trunk/plugins/filter/CMakeLists.txt
@@ -28,4 +28,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(filter simlib)
 
 # install target
-INSTALL(TARGETS filter LIBRARY DESTINATION plugins)
+INSTALL(TARGETS filter RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
