--- a/trunk/plugins/floaty/CMakeLists.txt
+++ b/trunk/plugins/floaty/CMakeLists.txt
@@ -19,4 +19,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(floaty simlib)
 
 # install target
-INSTALL(TARGETS floaty LIBRARY DESTINATION plugins)
+INSTALL(TARGETS floaty RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
