--- a/trunk/plugins/icons/CMakeLists.txt
+++ b/trunk/plugins/icons/CMakeLists.txt
@@ -26,4 +26,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(icons simlib)
 
 # install target
-INSTALL(TARGETS icons LIBRARY DESTINATION plugins)
+INSTALL(TARGETS icons RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
