--- a/trunk/plugins/icq/CMakeLists.txt
+++ b/trunk/plugins/icq/CMakeLists.txt
@@ -81,4 +81,8 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(icq simlib)
 
 # install target
-INSTALL(TARGETS icq LIBRARY DESTINATION plugins)
+INSTALL(TARGETS icq LIBRARY DESTINATION {SIM_PLUGIN_DIR})
+
+# install some sounds
+INSTALL(FILES sounds/mailpager.wav DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/web.wav DESTINATION ${SIM_SOUND_DIR})
