--- a/trunk/plugins/navigate/CMakeLists.txt
+++ b/trunk/plugins/navigate/CMakeLists.txt
@@ -29,4 +29,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(navigate simlib)
 
 # install target
-INSTALL(TARGETS navigate LIBRARY DESTINATION plugins)
+INSTALL(TARGETS navigate RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
