--- a/trunk/plugins/ontop/CMakeLists.txt
+++ b/trunk/plugins/ontop/CMakeLists.txt
@@ -26,4 +26,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(ontop simlib)
 
 # install target
-INSTALL(TARGETS ontop LIBRARY DESTINATION plugins)
+INSTALL(TARGETS ontop RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
