--- a/trunk/plugins/sound/CMakeLists.txt
+++ b/trunk/plugins/sound/CMakeLists.txt
@@ -28,4 +28,19 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(sound simlib)
 
 # install target
-INSTALL(TARGETS sound LIBRARY DESTINATION plugins)
+INSTALL(TARGETS sound RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+
+# install some sounds
+INSTALL(FILES sounds/alert.wav      DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/auth.wav       DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/contacts.wav   DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/file.wav       DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/filedone.wav   DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/message.wav    DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/message2.wav   DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/msgsent.wav    DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/sms.wav        DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/startup.wav    DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/system.wav     DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/url.wav        DESTINATION ${SIM_SOUND_DIR})
+INSTALL(FILES sounds/vip-online.wav DESTINATION ${SIM_SOUND_DIR})
