--- a/trunk/plugins/styles/wood/CMakeLists.txt
+++ b/trunk/plugins/styles/wood/CMakeLists.txt
@@ -18,4 +18,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(wood simlib)
 
 # install target
-INSTALL(TARGETS wood LIBRARY DESTINATION plugins/styles)
+INSTALL(TARGETS wood RUNTIME  DESTINATION ${SIM_PLUGIN_DIR}/styles)
