--- a/trunk/plugins/update/CMakeLists.txt
+++ b/trunk/plugins/update/CMakeLists.txt
@@ -18,4 +18,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(update simlib)
 
 # install target
-INSTALL(TARGETS update LIBRARY DESTINATION plugins)
+INSTALL(TARGETS update RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
