--- a/trunk/plugins/windock/CMakeLists.txt
+++ b/trunk/plugins/windock/CMakeLists.txt
@@ -18,4 +18,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(windock simlib)
 
 # install target
-INSTALL(TARGETS windock LIBRARY DESTINATION plugins)
+INSTALL(TARGETS windock RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
