--- a/trunk/sim/CMakeLists.txt
+++ b/trunk/sim/CMakeLists.txt
@@ -73,14 +73,14 @@ INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${LIBXSLT_INCLUDE_DIR} ${ZLIB_INCLUDE
 TARGET_LINK_LIBRARIES(simlib ${QT_QTMAIN_LIBRARY} ${QT_QT_LIBRARY} ${LIBXML2_LIBRARIES} ${LIBXSLT_LIBRARIES})
 
 # set correct install path
-INSTALL(TARGETS simlib LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX})
+INSTALL(TARGETS simlib RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
 
 ##################
 # sim executable #
 ##################
 
 # main program
-ADD_EXECUTABLE(sim sim.cpp)
+ADD_EXECUTABLE(sim sim.cpp sim.rc)
 
 # only needs simlib
 TARGET_LINK_LIBRARIES(sim simlib)
