make plugins optional compilable

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -7,20 +7,40 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.4.2)
 
 # where to look first for cmake modules, before ${CMAKE_ROOT}/Modules/ is checked
 SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+
+INCLUDE(FindQt3)
+INCLUDE(Flex)
+INCLUDE(Jisp)
 INCLUDE(KDE3Macros)
 INCLUDE(MacroBoolTo01)
 INCLUDE(Qt3Uic)
-INCLUDE(Flex)
-INCLUDE(Jisp)
+INCLUDE(SimPlugins)
+
+SIM_FIND_PLUGINS()
+
+IF(NOT QT_FOUND)
+    MESSAGE(FATAL_ERROR "Could not find Qt3 - cannot compile sim-im here")
+ENDIF(NOT QT_FOUND)
 
 # needed packages
 FIND_PACKAGE(Qt3 REQUIRED)
 FIND_PACKAGE(LibXml2 REQUIRED)
 FIND_PACKAGE(LibXslt REQUIRED)
-#FIND_PACKAGE(ZLIB REQUIRED)
 
 # optional packages
 FIND_PACKAGE(OpenSSL)
+INCLUDE(FindX11)
+
+IF(NOT WIN32)
+    INCLUDE(FindKDE3)
+    IF(KDE3_FOUND)
+        OPTION(USE_KDE3 "Use kde3 integration" YES)
+    ENDIF(KDE3_FOUND)
+ENDIF(NOT WIN32)
+
+MACRO_BOOL_TO_01(OPENSSL_FOUND USE_OPENSSL)
+MACRO_BOOL_TO_01(X11_FOUND HAVE_X)
+MACRO_BOOL_TO_01(USE_KDE3 USE_KDE)
 
 # global settings for every project
 ADD_DEFINITIONS(${QT_DEFINITIONS} -DHAVE_CONFIG_H)
@@ -38,8 +58,6 @@ if(MSVC)
   endif(CMAKE_COMPILER_2005)
 endif(MSVC)
 
-MACRO_BOOL_TO_01(OPENSSL_FOUND USE_OPENSSL)
-
 SET(SIM_ICONS_DIR  icons)
 SET(SIM_PICT_DIR   pict)
 SET(SIM_PLUGIN_DIR plugins)
@@ -49,41 +67,7 @@ SET(SIM_STYLES_DIR styles)
 
 # subdirectories
 ADD_SUBDIRECTORY(sim)
-ADD_SUBDIRECTORY(plugins/__homedir)
-ADD_SUBDIRECTORY(plugins/__migrate)
-ADD_SUBDIRECTORY(plugins/_core)
-ADD_SUBDIRECTORY(plugins/about)
-ADD_SUBDIRECTORY(plugins/action)
-ADD_SUBDIRECTORY(plugins/autoaway)
-ADD_SUBDIRECTORY(plugins/background)
-ADD_SUBDIRECTORY(plugins/dock)
-ADD_SUBDIRECTORY(plugins/filter)
-ADD_SUBDIRECTORY(plugins/floaty)
-ADD_SUBDIRECTORY(plugins/forward)
-ADD_SUBDIRECTORY(plugins/gpg)
-ADD_SUBDIRECTORY(plugins/icons)
-ADD_SUBDIRECTORY(plugins/icq)
-ADD_SUBDIRECTORY(plugins/jabber)
-ADD_SUBDIRECTORY(plugins/livejournal)
-ADD_SUBDIRECTORY(plugins/logger)
-ADD_SUBDIRECTORY(plugins/msn)
-ADD_SUBDIRECTORY(plugins/navigate)
-ADD_SUBDIRECTORY(plugins/netmonitor)
-ADD_SUBDIRECTORY(plugins/ontop)
-ADD_SUBDIRECTORY(plugins/osd)
-ADD_SUBDIRECTORY(plugins/proxy)
-ADD_SUBDIRECTORY(plugins/replace)
-ADD_SUBDIRECTORY(plugins/shortcuts)
-ADD_SUBDIRECTORY(plugins/sms)
-ADD_SUBDIRECTORY(plugins/sound)
-ADD_SUBDIRECTORY(plugins/spell)
-ADD_SUBDIRECTORY(plugins/splash)
-ADD_SUBDIRECTORY(plugins/styles)
-ADD_SUBDIRECTORY(plugins/transparent)
-ADD_SUBDIRECTORY(plugins/update)
-ADD_SUBDIRECTORY(plugins/weather)
-ADD_SUBDIRECTORY(plugins/yahoo)
-ADD_SUBDIRECTORY(plugins/zodiak)
+SIM_INCLUDE_PLUGINS()
 
 # create config.h
 INCLUDE(ConfigureChecks.cmake)
