Fix installing libraries with cmake

--- a/trunk/plugins/__migrate/CMakeLists.txt
+++ b/trunk/plugins/__migrate/CMakeLists.txt
@@ -26,4 +26,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(__migrate simlib)
 
 # install target
-INSTALL(TARGETS __migrate RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS __migrate LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
