--- a/trunk/plugins/_core/CMakeLists.txt
+++ b/trunk/plugins/_core/CMakeLists.txt
@@ -127,4 +127,4 @@ ADD_JISP_ARCHIVE(smiles     smiles.jisp)
 TARGET_LINK_LIBRARIES(_core simlib)
 
 # install target
-INSTALL(TARGETS _core RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS _core LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
