--- a/trunk/plugins/action/CMakeLists.txt
+++ b/trunk/plugins/action/CMakeLists.txt
@@ -31,4 +31,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}
 TARGET_LINK_LIBRARIES(action simlib)
 
 # install target
-INSTALL(TARGETS action RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS action LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
