--- a/trunk/plugins/weather/CMakeLists.txt
+++ b/trunk/plugins/weather/CMakeLists.txt
@@ -31,4 +31,4 @@ TARGET_LINK_LIBRARIES(weather simlib)
 ADD_JISP_ARCHIVE(jisp weather.jisp)
 
 # install target
-INSTALL(TARGETS weather RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS weather LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
