--- a/trunk/plugins/__homedir/CMakeLists.txt
+++ b/trunk/plugins/__homedir/CMakeLists.txt
@@ -26,4 +26,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(__homedir simlib)
 
 # install target
-INSTALL(TARGETS __homedir RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS __homedir LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
