--- a/trunk/plugins/autoaway/CMakeLists.txt
+++ b/trunk/plugins/autoaway/CMakeLists.txt
@@ -26,7 +26,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(autoaway simlib)
 
 # install target
-INSTALL(TARGETS autoaway RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS autoaway LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
 
 
 ###############################
@@ -47,5 +47,5 @@ IF(WIN32)
     TARGET_LINK_LIBRARIES(idleui simlib)
 
     # install target
-    INSTALL(TARGETS idleui RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+    INSTALL(TARGETS idleui LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
 ENDIF(WIN32)
