--- a/trunk/plugins/forward/CMakeLists.txt
+++ b/trunk/plugins/forward/CMakeLists.txt
@@ -26,4 +26,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(forward simlib)
 
 # install target
-INSTALL(TARGETS forward RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS forward LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
