--- a/trunk/plugins/gpg/CMakeLists.txt
+++ b/trunk/plugins/gpg/CMakeLists.txt
@@ -36,4 +36,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}})
 TARGET_LINK_LIBRARIES(gpg simlib)
 
 # install target
-INSTALL(TARGETS gpg RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS gpg LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
