--- a/trunk/plugins/jabber/CMakeLists.txt
+++ b/trunk/plugins/jabber/CMakeLists.txt
@@ -54,7 +54,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(jabber simlib)
 
 # install target
-INSTALL(TARGETS jabber RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS jabber LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
 
 # install some sounds
 INSTALL(FILES sounds/error.wav DESTINATION ${SIM_SOUND_DIR})
