--- a/trunk/plugins/logger/CMakeLists.txt
+++ b/trunk/plugins/logger/CMakeLists.txt
@@ -26,4 +26,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(logger simlib)
 
 # install target
-INSTALL(TARGETS logger RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS logger LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
