--- a/trunk/plugins/replace/CMakeLists.txt
+++ b/trunk/plugins/replace/CMakeLists.txt
@@ -26,4 +26,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(replace simlib)
 
 # install target
-INSTALL(TARGETS replace RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS replace LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
