--- a/trunk/plugins/shortcuts/CMakeLists.txt
+++ b/trunk/plugins/shortcuts/CMakeLists.txt
@@ -28,4 +28,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(shortcuts simlib)
 
 # install target
-INSTALL(TARGETS shortcuts RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS shortcuts LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
