--- a/trunk/plugins/sound/CMakeLists.txt
+++ b/trunk/plugins/sound/CMakeLists.txt
@@ -28,7 +28,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(sound simlib)
 
 # install target
-INSTALL(TARGETS sound RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS sound LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
 
 # install some sounds
 INSTALL(FILES sounds/alert.wav      DESTINATION ${SIM_SOUND_DIR})
