--- a/trunk/plugins/splash/CMakeLists.txt
+++ b/trunk/plugins/splash/CMakeLists.txt
@@ -18,7 +18,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(splash simlib)
 
 # install target
-INSTALL(TARGETS splash RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS splash LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
 
 # splash.png
 INSTALL(FILES splash.png DESTINATION ${SIM_PICT_DIR})
