--- a/trunk/plugins/styles/CMakeLists.txt
+++ b/trunk/plugins/styles/CMakeLists.txt
@@ -31,4 +31,4 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(styles simlib)
 
 # install target
-INSTALL(TARGETS styles RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS styles LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
