fix compile windock is a win32-only plugin

--- a/trunk/plugins/sms/CMakeLists.txt
+++ b/trunk/plugins/sms/CMakeLists.txt
@@ -23,7 +23,8 @@ QT3_ADD_UI_FILES(sms_LIB_SRCS ${sms_UI_FILES})
 ADD_LIBRARY(sms SHARED ${sms_LIB_SRCS})
 
 # some needed include dirs
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}
+                    ${CMAKE_BINARY_DIR}/plugins/_core)
 
 TARGET_LINK_LIBRARIES(sms simlib)
 
