fix name and add soname for libsim, remove -lssleay32; now libsim can compile on unix

--- a/trunk/sim/CMakeLists.txt
+++ b/trunk/sim/CMakeLists.txt
@@ -50,6 +50,7 @@ ADD_FLEX_FILES(sim_LIB_SRCS html.ll)
 
 # our target
 ADD_LIBRARY(simlib SHARED ${sim_LIB_SRCS})
+SET_TARGET_PROPERTIES(simlib PROPERTIES OUTPUT_NAME sim VERSION 0.0.0 SOVERSION 0)
 
 #some needed defines
 ADD_DEFINITIONS(-DSIMAPI_EXPORTS -DNOUNCRYPT)
@@ -60,7 +61,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 # openssl is optional
 if(OPENSSL_FOUND)
   INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
-  TARGET_LINK_LIBRARIES(simlib ${OPENSSL_LIBRARIES} ssleay32)
+  TARGET_LINK_LIBRARIES(simlib ${OPENSSL_LIBRARIES})
 endif(OPENSSL_FOUND)
 
 # we need wsock32 on win32
